{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 18,
  "lineage": "d70f3a57-166b-681a-876e-2affba6b46c3",
  "resources": [
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:627002024306:instance/i-0367b5a2d017faba0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0367b5a2d017faba0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "aws_ec2_terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a9b730ea260f58f3"
              }
            ],
            "primary_network_interface_id": "eni-0a9b730ea260f58f3",
            "private_dns": "ip-11-0-1-38.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.38",
            "public_ip": "43.204.25.62",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-076ca52fff6b596cf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2bad39d0ca31221",
            "tags": {
              "Name": "Jenkins:Ubuntu Linux EC2"
            },
            "tags_all": {
              "Name": "Jenkins:Ubuntu Linux EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0459467b2f1231467",
              "sg-0c37878364e4e03c8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627002024306",
            "id": "i-0367b5a2d017faba0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.jenkins.aws_key_pair.jenkins_ec2_instance_public_key",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_ap_south_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_proj_1_public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:627002024306:internet-gateway/igw-01a5c46fb604cfc5f",
            "id": "igw-01a5c46fb604cfc5f",
            "owner_id": "627002024306",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-proj-1-igw"
            },
            "tags_all": {
              "Name": "dev-proj-1-igw"
            },
            "vpc_id": "vpc-019a9616b20e2fd06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_proj_1_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:627002024306:route-table/rtb-0b0bee4398d7a2828",
            "id": "rtb-0b0bee4398d7a2828",
            "owner_id": "627002024306",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "dev-proj-1-private-route-table"
            },
            "tags_all": {
              "Name": "dev-proj-1-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-019a9616b20e2fd06"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627002024306",
            "id": "rtb-0b0bee4398d7a2828",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_proj_1_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:627002024306:route-table/rtb-05b554a3bcee0156b",
            "id": "rtb-05b554a3bcee0156b",
            "owner_id": "627002024306",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a5c46fb604cfc5f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-proj-1-public-route-table"
            },
            "tags_all": {
              "Name": "dev-proj-1-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-019a9616b20e2fd06"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627002024306",
            "id": "rtb-05b554a3bcee0156b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.networking.aws_vpc.dev_proj_1_vpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_1_private_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00505bb541a681619",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b0bee4398d7a2828",
            "subnet_id": "subnet-001bbc0b8461f9233"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.dev_proj_1_private_route_table",
            "module.networking.aws_subnet.dev_proj_1_private_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_ap_south_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067e1f60929ddc12d",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b0bee4398d7a2828",
            "subnet_id": "subnet-02e0d504d97cf5b7f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.dev_proj_1_private_route_table",
            "module.networking.aws_subnet.dev_proj_1_private_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_1_public_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bd93dcdc9270d9e",
            "region": "ap-south-1",
            "route_table_id": "rtb-05b554a3bcee0156b",
            "subnet_id": "subnet-0b2bad39d0ca31221"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.networking.aws_route_table.dev_proj_1_public_route_table",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_ap_south_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074163a58dcc3a053",
            "region": "ap-south-1",
            "route_table_id": "rtb-05b554a3bcee0156b",
            "subnet_id": "subnet-03b269a75ca973327"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.networking.aws_route_table.dev_proj_1_public_route_table",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_proj_1_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:627002024306:subnet/subnet-001bbc0b8461f9233",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001bbc0b8461f9233",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627002024306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-proj-private-subnet-1"
            },
            "tags_all": {
              "Name": "dev-proj-private-subnet-1"
            },
            "vpc_id": "vpc-019a9616b20e2fd06"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627002024306",
            "id": "subnet-001bbc0b8461f9233",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_ap_south_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:627002024306:subnet/subnet-02e0d504d97cf5b7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e0d504d97cf5b7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627002024306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-proj-private-subnet-2"
            },
            "tags_all": {
              "Name": "dev-proj-private-subnet-2"
            },
            "vpc_id": "vpc-019a9616b20e2fd06"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627002024306",
            "id": "subnet-02e0d504d97cf5b7f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_proj_1_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:627002024306:subnet/subnet-0b2bad39d0ca31221",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2bad39d0ca31221",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627002024306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-proj-public-subnet-1"
            },
            "tags_all": {
              "Name": "dev-proj-public-subnet-1"
            },
            "vpc_id": "vpc-019a9616b20e2fd06"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627002024306",
            "id": "subnet-0b2bad39d0ca31221",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_ap_south_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:627002024306:subnet/subnet-03b269a75ca973327",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b269a75ca973327",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627002024306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-proj-public-subnet-2"
            },
            "tags_all": {
              "Name": "dev-proj-public-subnet-2"
            },
            "vpc_id": "vpc-019a9616b20e2fd06"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627002024306",
            "id": "subnet-03b269a75ca973327",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_proj_1_vpc_ap_south_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:627002024306:vpc/vpc-019a9616b20e2fd06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0fd75dd3a1f6692ef",
            "default_route_table_id": "rtb-012b9182e9454a29a",
            "default_security_group_id": "sg-046f5e2708b5dcdc9",
            "dhcp_options_id": "dopt-03d6385f1fc43fb11",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-019a9616b20e2fd06",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012b9182e9454a29a",
            "owner_id": "627002024306",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-proj-jenkins-ap-south-vpc-1"
            },
            "tags_all": {
              "Name": "dev-proj-jenkins-ap-south-vpc-1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627002024306",
            "id": "vpc-019a9616b20e2fd06",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_jenkins_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:627002024306:security-group/sg-0459467b2f1231467",
            "description": "Enable the Port 8080 for jenkins",
            "egress": [],
            "id": "sg-0459467b2f1231467",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8080 port to access jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Allow port 8080 for jenkins",
            "name_prefix": "",
            "owner_id": "627002024306",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Groups to allow HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-019a9616b20e2fd06"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627002024306",
            "id": "sg-0459467b2f1231467",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:627002024306:security-group/sg-0c37878364e4e03c8",
            "description": "Enable the Port 22(SSH) \u0026 Port 80(http)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing request",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c37878364e4e03c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPs request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow remote SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG for EC2 to enable SSH(22), HTTPS(443) and HTTP(80)",
            "name_prefix": "",
            "owner_id": "627002024306",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow SSH(22), HTTP(80) and HTTPS(443)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22), HTTP(80) and HTTPS(443)"
            },
            "timeouts": null,
            "vpc_id": "vpc-019a9616b20e2fd06"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627002024306",
            "id": "sg-0c37878364e4e03c8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_ap_south_1"
          ]
        }
      ]
    }
  ]
}